...
        
    let nameNode: ASTextNode
    let showsNode: ASTextNode
    let sourcesNode: ASTextNode
    let favoriteNode: FavoriteButtonNode
    
    public var favoriteButtonAccessibilityLabel : String { get { return "Favorite Artist" } }
    
    var disposal = Disposal()
    
    public init(artist: ArtistWithCounts, withFavoritedArtists: [UUID]) {
        self.artist = artist
        self.favoriteArtists = withFavoritedArtists
...
