...
            if let s = source.taper, s.count > 0 {
                stack.append(taperLayout)
            }
        }
        
        let details = LabelLayout(
            text: "See details, taper notes, reviews & more ›",
            font: UIFont.preferredFont(forTextStyle: .caption1),
            numberOfLines: 1,
            alignment: .fillLeading,
            flexibility: .flexible,
            viewReuseId: "seeDetails"
        ) { (label) in label.textColor = UIColor.gray }
...
